
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;



__attribute__((used)) static uint32_t
api_muladd(unsigned char *A, const unsigned char *B, size_t len,
 const unsigned char *x, size_t xlen,
 const unsigned char *y, size_t ylen, int curve)
{





 (void)A;
 (void)B;
 (void)len;
 (void)x;
 (void)xlen;
 (void)y;
 (void)ylen;
 (void)curve;
 return 0;
}
